RESOLVED FIXED151742
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=151742
Summary [WinCairo] Compile error.
peavo
Reported 2015-12-02 02:37:36 PST
System font flag has moved from Font class to FontData class.
Attachments
Patch (2.00 KB, patch)
2015-12-02 02:42 PST, peavo
no flags
peavo
Comment 1 2015-12-02 02:42:28 PST
Csaba Osztrogonác
Comment 2 2015-12-02 02:47:29 PST
Comment on attachment 266436 [details] Patch LGTM
peavo
Comment 3 2015-12-02 03:27:47 PST
(In reply to comment #2) > Comment on attachment 266436 [details] > Patch > > LGTM Thanks!
WebKit Commit Bot
Comment 4 2015-12-02 04:08:51 PST
Comment on attachment 266436 [details] Patch Clearing flags on attachment: 266436 Committed r192943: <http://trac.webkit.org/changeset/192943>
WebKit Commit Bot
Comment 5 2015-12-02 04:08:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.