[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=151742

Reviewed by Csaba Osztrogonác.

System font flag has moved from Font class to FontData class.

* platform/graphics/win/SimpleFontDataCairoWin.cpp:
(WebCore::Font::platformInit):


Canonical link: https://commits.webkit.org/169889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192943 268f45cc-cd09-0410-ab3c-d52691b4dbfc